// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`centered 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
/>
`;

exports[`horizontal/vertical alignment 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  justify-items: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
/>
`;

exports[`using \`TypographyContext\` useTypography = false 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  Content
</div>
`;

exports[`using \`TypographyContext\` useTypography = true 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
}

<div
  class="c0"
>
  Content
</div>
`;

exports[`with background properties 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  background-color: #123456;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
/>
`;

exports[`with border properties 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  border-radius: 5px;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
/>
`;

exports[`with children 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <span>
    Hi!
  </span>
</div>
`;

exports[`with grid properties: auto 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  grid-auto-columns: 50px;
  grid-auto-rows: 100px;
  grid-gap: 10px;
  grid-auto-flow: column;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
/>
`;

exports[`with grid properties: templates 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  grid-template-columns: repeat(3,3fr);
  grid-template-rows: 1fr 2fr;
  grid-gap: 10px;
  grid-auto-flow: row;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
/>
`;

exports[`with no props 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
/>
`;

exports[`with padding 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  padding: 10px;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
/>
`;
